jdk兼容